javascript scroll indicator prj13

--- a/11-ModernScrollbars/index.html
+++ b/11-ModernScrollbars/index.html
@@ -12,6 +12,13 @@
     <div class="scroll-div">
         <div class="scroll-object">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit reiciendis vitae incidunt laborum similique temporibus pariatur in consequatur eum natus maxime illo, alias voluptate enim veniam praesentium magni! Nam, optio.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum eveniet neque praesentium autem ea error qui nostrum deserunt hic ullam ipsam modi facilis, libero nam blanditiis ab id doloremque aspernatur?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint tempore facilis odit. Ad hic laborum quia velit dicta adipisci corporis labore error voluptatem recusandae neque distinctio non, at magni reprehenderit.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam qui velit hic, reiciendis, soluta praesentium distinctio eos nobis saepe, facere optio repellat quas labore pariatur. Quibusdam assumenda doloribus consequatur officiis.lorem
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore nemo expedita accusantium non tempora ipsa, deleniti quam quia nostrum vitae laudantium sed quisquam ipsam provident? Quidem voluptatum deleniti voluptas quibusdam.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus labore impedit esse provident sapiente, earum dolore deleniti voluptatem libero ab omnis porro quos ipsa quasi corporis eaque est sint non?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum illo exercitationem, culpa libero, ullam quia odio omnis vel corrupti, eius consequuntur? Voluptas architecto quisquam sint quos enim unde esse quasi?
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aperiam incidunt quod ab accusantium! Vero incidunt quidem, unde vel fugit dolorem quisquam. Itaque aliquid iste tenetur reprehenderit unde perspiciatis? Ad.
             
         </div>
     </div>
