--- a/16-Auto-Text-Gen/index.html
+++ b/16-Auto-Text-Gen/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     
-    <p>
+    <!-- <p>
         <span class="js">JavaScript</span> Is <span class="typed-text"></span>
          <span class="cursor">&nbsp;</span>
-    </p>
+    </p> -->
+
+    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/324512418&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/laura-l-decke" title="Laura Lüdecke" target="_blank" style="color: #cccccc; text-decoration: none;">Laura Lüdecke</a> · <a href="https://soundcloud.com/laura-l-decke/sets/sherlock-holmes-soundtrack" title="Sherlock Holmes Soundtrack" target="_blank" style="color: #cccccc; text-decoration: none;">Sherlock Holmes Soundtrack</a></div>
 
     <script src="app.js"></script>
 </body>
