some changes to prj 18

--- a/18-GameLanding-Pae/index.html
+++ b/18-GameLanding-Pae/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="image-container">
-        <img src="bm.png" class="btn">
+        <img src="bm.png" class="btn" />
     </div>
 
     <div class="trailer-container active">
@@ -18,6 +18,6 @@
     </div>
 
     
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
